--- a/style.css
+++ b/style.css
@@ -9,3 +9,80 @@ License: GNU General Public License Version 2 or later
 License URI: https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html
 Text Domain: assignment
 */
+
+/*=========================
+Universal Styling
+==========================*/
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  box-sizing: border-box;
+}
+
+header nav li {
+  display: inline-block;
+  padding-right: 2em;
+  margin-top: 2em;
+}
+
+nav {
+  text-align: right;
+}
+
+nav a:hover{
+color: goldenrod;
+}
+
+header a{
+  color: rgb(10 11 10);
+  margin: 5%;
+  text-decoration: underline;
+
+}
+
+h1, h2, h3 {
+  color:  forestgreen;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+h4 {
+  color: goldenrod;
+  margin-left: 1%;
+  margin-top: 1%;
+}
+
+p {
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+a {
+  color: goldenrod;
+  text-decoration: none;
+}
+
+.logo {
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.featured-image{
+  margin-top: 2%;
+  margin-bottom: 3%;
+}
+
+footer {
+  background-color: rgb(10 11 10);
+  text-align: left;
+  margin: 2%;
+}
+
+footer p{
+  color: rgb(241 241 241);
+  margin-left: 2%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
